--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Yama Phase Reminder
+author=Abusivetuna
+description=https://github.com/AbusiveTuna/yamaPhaseReminder
+tags=Yama, Phase, Reminder, notice, p3, p2, p1
+plugins=com.yama.PhaseReminderPlugin
